# learning-companion

./: .gitignore  README.MD  pyproject.toml  requirements.txt  setup.py  setup.sh
learning_companion/: main.py
learning_companion/config/: __init__.py  config.py
learning_companion/graph/: __init__.py  chains.py  graph.py  nodes.py  state.py
learning_companion/retriever/: __init__.py  retriever.py  urls.py
learning_companion/web_search/: __init__.py  google_cse.py
